# wasm-wiretap

./: Cargo.toml  Containerfile  Makefile  README.md
deploy/: wasmplugin-loki.yaml  wasmplugin-otlp.yaml  wasmplugin-sidecar.yaml  wasmplugin-victorialogs.yaml
examples/: example-output.json
src/: capture.rs  config.rs  exporters.rs  lib.rs
