[package]
name = "wasm-wiretap"
version = "0.1.0"
edition = "2021"
description = "A proxy-wasm plugin for capturing HTTP request/response data and exporting to Loki or OpenTelemetry"
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
proxy-wasm = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[profile.release]
opt-level = "s"
lto = true
strip = "debuginfo"
